[tool.poetry]
name = "itemsystem"
version = "0.1.0"
description = ""
authors = ["shabbywu <shabbywu@tencent.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
